manifests/dev/kite/Deployment-kite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: kite
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kite
    app.kubernetes.io/version: v0.14.1
    helm.sh/chart: kite-0.14.1
  name: kite
  namespace: kite
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: kite
      app.kubernetes.io/name: kite
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kite
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kite
        app.kubernetes.io/version: v0.14.1
        helm.sh/chart: kite-0.14.1
    spec:
      containers:
        - command:
            - /app/kite
          image: ghcr.io/kite-org/kite:v0.14.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          name: kite
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: kite-storage
      nodeSelector:
        kubernetes.io/hostname: edgenix
      serviceAccountName: kite
      volumes:
        - name: kite-storage
          persistentVolumeClaim:
            claimName: kite-storage
