manifests/dev/kite/Service-kite.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kite
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kite
    app.kubernetes.io/version: v0.14.1
    helm.sh/chart: kite-0.14.1
  name: kite
  namespace: kite
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: kite
    app.kubernetes.io/name: kite
  type: ClusterIP
