manifests/dev/kite/Ingress-kite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/instance: kite
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kite
    app.kubernetes.io/version: v0.14.1
    helm.sh/chart: kite-0.14.1
  name: kite
  namespace: kite
spec:
  ingressClassName: traefik
  rules:
    - host: kite.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: kite
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - kite.home.kronkltd.net
      secretName: kite.home.kronkltd.net-tls
